--- a/public/scss/_hero.scss
+++ b/public/scss/_hero.scss
@@ -1,12 +1,153 @@
-
+/*----------------------------------------*/
+/*  03. HERO CSS START
+/*----------------------------------------*/
 
 .hero{
-    padding-top: 150px;
-    height: 150vh;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
+    &__area{
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;  
+        & .text-hero-wrapper{
+            @media #{$md}{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                
+            }
+            @media #{$xs, $sm}{
+                margin-top: 35%;
+            }
+            @media #{$md}{
+                margin-top: 20%;
+            }
+            @media #{$xl}{
+                margin-top: 5%;
+            }
+            & h1, h2{
+                text-transform: uppercase;
+            }
+            & h1{
+                font-size: 45px;
+                color: rgb(185, 60, 81);
+                @media #{$xxl}{
+                    font-size: 65px;                    
+                }
+                @media #{$xl}{
+                    font-size: 58px;                    
+                }
+                
+            }
+            & h2{
+                font-size: 30px;
+                color: #fff;
+                @media #{$xxl}{
+                    font-size: 40px;                    
+                }
+                @media #{$xl}{
+                    font-size: 38px;                    
+                }
+            }
 
-    & h1{
-        text-align: center;
-        color: $white;
+            & .text-typist{
+                font-size: 30px;
+                color: #fff;
+                text-transform: uppercase;
+                @media #{$xs}{
+                    padding-right: 45px;
+                }
+                @media #{$xxl}{
+                    font-size: 35px;                    
+                }
+            }
+        }
+        & .hero-img-right{
+            & img{
+                max-width: 400px;
+                @media #{$xs}{
+                    max-width: 300px;
+                    margin-top: 50px;
+                }
+                @media #{$sm}{
+                    margin-top: 80px;
+                }
+                @media #{$md}{
+                    margin-top: 80px;
+                }
+
+            }
+        }
+    }
+    &__height{
+        min-height: 100vh;
+        @media #{$lg}{
+            min-height: 850px;
+        }
+        @media #{$md}{
+            min-height: 100vh;
+        }
+        @media #{$sm}{
+            min-height: 100vh;
+        }
+        @media #{$xs}{
+            min-height: 100vh
+        }
+        
+    }
+    &__thumb{
+        @media #{$xxl}{
+            margin-left: 0;
+        }
+        @media #{$xl}{
+            margin-left: 0;
+        }
+        @media #{$lg}{
+            margin-left: 0;
+        }
+        @media #{$md}{
+            margin-left: 100px;
+            margin-top: 80px;
+        }
+        @media #{$sm}{
+            margin-left: 80px;
+            margin-top: 80px;
+        }
+        @media #{$xs}{
+            margin-left: 0;
+            margin-top: 80px;
+        }
+        &-shape{
+            position: relative;
+            -webkit-animation: hero-thumb-animation 2s linear infinite alternate;
+            -moz-animation: hero-thumb-animation 2s linear infinite alternate; 
+            -o-animation: hero-thumb-animation 2s linear infinite alternate;
+            animation: hero-thumb-animation 2s linear infinite alternate; 
+            @media #{$xs, $sm, $md}{
+                display: flex;
+                justify-content: center;
+            }
+            
+        }
+    }
+    
+    
+}
+
+
+
+@keyframes hero-thumb-animation{
+    0%{
+      transform: translateY(-20px);
+    }
+    100%{
+      transform: translateY(0px);
     }
 }
+
+
+
+
+
+
+
+
+
+
